tests/codegen/fail/subscription/argument_double_underscored.stderr
error: All types and directives defined within a schema must not have a name which begins with `__` (two underscores), as this is used exclusively by GraphQL’s introspection system.
  --> fail/subscription/argument_double_underscored.rs:11:24
   |
11 |     async fn id(&self, __num: i32) -> Stream<'static, &'static str> {
   |                        ^^^^^
   |
   = note: https://spec.graphql.org/October2021#sec-Schema
